Fix memcheck settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,9 +56,9 @@ IF(GF_BUILD_TEST OR GF_BUILD_TEST_MEMORYCHECK)
 
 	# memcheck
 	IF(GF_BUILD_TEST_MEMORYCHECK)
-		INCLUDE(Dart)
-		FIND_PROGRAM(CTEST_MEMORYCHECK_COMMAND NAMES valgrind)
-		SET(CTEST_MEMORYCHECK_COMMAND_OPTIONS "--leak-check=full --show-leak-kinds=definite,possible --error-exitcode=1")
+		FIND_PROGRAM(MEMORYCHECK_COMMAND NAMES valgrind)
+		SET(MEMORYCHECK_COMMAND_OPTIONS "--leak-check=full --show-leak-kinds=definite,possible --error-exitcode=1")
+		SET(MEMORYCHECK_SUPPRESSIONS_FILE "${PROJECT_SOURCE_DIR}/ci/valgrind_suppression.supp" )
 	ENDIF()
 ENDIF()
 
