--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
   - echo $LC_ALL
   - cmake --version
   - ls -la
+  - export BASEPATH=`pwd`
+  - mkdir ${BASEPATH}/usr
   - export GF_BUILD_BENCHMARKS="-DGF_BUILD_BENCHMARKS=ON"
   - export GF_BUILD_EXAMPLES="-DGF_BUILD_EXAMPLES=ON"
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install gcc48; fi
@@ -30,7 +32,7 @@ before_install:
   # valgrind does not work in osx
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export GF_BUILD_TEST="-DGF_BUILD_TEST=ON"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export GF_BUILD_TEST_MEMORYCHECK="-DGF_BUILD_TEST_MEMORYCHECK=ON"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2 && tar xjf valgrind-3.12.0.tar.bz2 && cd valgrind-3.12.0 && ./configure --prefix=${BASE}/usr > /dev/null && make -j3 > /dev/null && make install > /dev/null && cd ..; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2 && tar xjf valgrind-3.12.0.tar.bz2 && cd valgrind-3.12.0 && ./configure --prefix=${BASEPATH}/usr > /dev/null && make -j3 > /dev/null && make install > /dev/null && cd ..; fi
   - valgrind --version
 install:
   # /usr/bin/gcc is 4.6 always, but gcc-X.Y is available.
