--- a/.travis.yml
+++ b/.travis.yml
@@ -32,9 +32,10 @@ before_install:
   # valgrind does not work in osx
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then export GF_BUILD_TEST="-DGF_BUILD_TEST=ON"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export GF_BUILD_TEST_MEMORYCHECK="-DGF_BUILD_TEST_MEMORYCHECK=ON"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export PATH="${BASE}/usr/bin:$PATH"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then export PATH="${BASEPATH}/usr/bin:$PATH"; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2 && tar xjf valgrind-3.12.0.tar.bz2 && cd valgrind-3.12.0 && ./configure --prefix=${BASEPATH}/usr > /dev/null && make -j3 > /dev/null && make install > /dev/null && cd ..; fi
   - valgrind --version
+  - echo $PATH
 install:
   # /usr/bin/gcc is 4.6 always, but gcc-X.Y is available.
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
