Add google/bencharmk as a git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodule/googletest"]
 	path = submodule/googletest
 	url = https://github.com/google/googletest.git
+[submodule "submodule/benchmark"]
+	path = submodule/benchmark
+	url = https://github.com/google/benchmark.git
