--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ env:
 before_install:
   - echo $LANG
   - echo $LC_ALL
-  - cmake --version
   - ls -la
   - export BASEPATH=`pwd`
   - mkdir ${BASEPATH}/usr
@@ -39,6 +38,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then wget http://valgrind.org/downloads/valgrind-3.12.0.tar.bz2 && tar xjf valgrind-3.12.0.tar.bz2 && cd valgrind-3.12.0 && ./configure --prefix=${BASEPATH}/usr > /dev/null && make -j3 > /dev/null && make install > /dev/null && cd ..; fi
   - valgrind --version
 install:
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ci/travis_cmake_setup.sh; fi
   # /usr/bin/gcc is 4.6 always, but gcc-X.Y is available.
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   # /usr/bin/clang is 3.4, lets override with modern one.
@@ -47,5 +47,6 @@ install:
   - echo ${CXX}
   - ${CXX} --version
   - ${CXX} -v
+  - cmake --version
 script:
   - ci/build_cmake.sh
