--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ before_install:
   - ls -la
   - export GNS_BUILD_BENCHMARKS="-DGNS_BUILD_BENCHMARKS=ON"
   - export GNS_BUILD_EXAMPLES="-DGNS_BUILD_EXAMPLES=OFF"
+  - if [ "$TRAVIS_OS_NAME" == "osx" -a "$CXX" == "g++" ]; then brew install gcc48; fi
   # valgrind does not work in osx so we only test with valgrind on linux
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
       export BASEPATH=`pwd`;
@@ -63,7 +64,9 @@ before_install:
 install:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then ci/travis_cmake_setup.sh; fi
   # /usr/bin/gcc is 4.6 always, but gcc-X.Y is available.
-  - if [ "$CXX" == "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" -a "$CXX" == "g++" ]; then
+      export CXX="g++-4.8" CC="gcc-4.8";
+    fi
   - if [ "${BUILD_TYPE}" == "Coverage" -a "${TRAVIS_OS_NAME}" == "linux" ]; then
       PATH=~/.local/bin:${PATH};
       pip install --user --upgrade pip;
