Fix error in valgrind

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,34 @@ matrix:
         - BUILD_TYPE=Debug
           GNS_BUILD_TEST="-DGNS_BUILD_TEST=ON"
           GNS_BUILD_TEST_MEMORYCHECK="-DGNS_BUILD_TEST_MEMORYCHECK=ON"
+      addons:
+        apt:
+          sources:
+            # List of whitelisted in travis packages for ubuntu-precise can be found here:
+            #   https://github.com/travis-ci/apt-package-whitelist/blob/master/ubuntu-precise
+            # List of whitelisted in travis apt-sources:
+            #   https://github.com/travis-ci/apt-source-whitelist/blob/master/ubuntu.json
+            - ubuntu-toolchain-r-test
+          packages:
+            - libc6-i386
+            - libc6-dbg
     - os: linux
       compiler: clang++
       env:
         - BUILD_TYPE=Debug
           GNS_BUILD_TEST="-DGNS_BUILD_TEST=ON"
           GNS_BUILD_TEST_MEMORYCHECK="-DGNS_BUILD_TEST_MEMORYCHECK=ON"
+      addons:
+        apt:
+          sources:
+            # List of whitelisted in travis packages for ubuntu-precise can be found here:
+            #   https://github.com/travis-ci/apt-package-whitelist/blob/master/ubuntu-precise
+            # List of whitelisted in travis apt-sources:
+            #   https://github.com/travis-ci/apt-source-whitelist/blob/master/ubuntu.json
+            - ubuntu-toolchain-r-test
+          packages:
+            - libc6-i386
+            - libc6-dbg
     - os: osx
       compiler: gcc
       env:
@@ -79,5 +101,6 @@ script:
   - ci/build_cmake.sh
 after_success:
   - if [ "${BUILD_TYPE}" == "Coverage" -a "${TRAVIS_OS_NAME}" == "linux" ]; then
-      coveralls --verbose --include gns --gcov-options '\-lp' --root .. --build-root build;
+      pwd;
+      coveralls --verbose --include gns --exclude submodule --gcov-options '\-lp' --root . --build-root build;
     fi
