--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -1,5 +1,6 @@
 LIST (APPEND benchmarks_PROGRAMS
     galois_field_operator.cc
+    sequence_sobol.cc
 )
 INCLUDE_DIRECTORIES(
     ${PROJECT_SOURCE_DIR}
@@ -15,10 +16,14 @@ FOREACH (source_file ${benchmarks_PROGRAMS})
     TARGET_LINK_LIBRARIES (${source_file_we}
         # gns
         benchmark
+        gns
     )
     ADD_TEST (${source_file_we} ${source_file_we})
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-        SET_PROPERTY (TARGET ${source_file_we} APPEND_STRING PROPERTY COMPILE_FLAGS "-Wall -Wextra -Werror -g -O3 ")
+        SET (CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
+        SET (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -Wno-unused-parameter ${CMAKE_CXX_FLAGS}")
+        SET (CMAKE_CXX_FLAGS "-g -O3 ${CMAKE_CXX_FLAGS}")
+        SET_PROPERTY (TARGET ${source_file_we} APPEND_STRING PROPERTY COMPILE_FLAGS "${CMAKE_CXX_FLAGS}")
     ENDIF ()
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         SET_PROPERTY (TARGET ${source_file_we} APPEND_STRING PROPERTY COMPILE_FLAGS " -Wno-mismatched-tags")
