Add docker files for gprof

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -25,6 +25,13 @@ FOREACH (source_file ${benchmarks_PROGRAMS})
         SET (CMAKE_CXX_FLAGS "-g -O3 ${CMAKE_CXX_FLAGS}")
         SET_PROPERTY (TARGET ${source_file_we} APPEND_STRING PROPERTY COMPILE_FLAGS "${CMAKE_CXX_FLAGS}")
     ENDIF ()
+    IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+        # If profiling with gprof is on
+        IF(GNS_BUILD_WITH_PROFILE)
+            SET (CMAKE_CXX_FLAGS "-pg ${CMAKE_CXX_FLAGS}")
+            SET (CMAKE_CXX_FLAGS "-g ${CMAKE_CXX_FLAGS}")
+        ENDIF()
+    ENDIF ()
     IF ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
         SET_PROPERTY (TARGET ${source_file_we} APPEND_STRING PROPERTY COMPILE_FLAGS " -Wno-mismatched-tags")
     ENDIF ()
