Add example to generate irreudicble polynomials

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
 LIST (APPEND examples_PROGRAMS
+    example_irreducible_polynomials.cc
     example_sequence_sobol.cc
     example_simple_two_dim.cc
 )
